trunk/Archive2/53/a6cb64b7f48b63/output
main.cpp: In function 'uint8_t foo(uint8_t)':
main.cpp:6:16: warning: conversion to 'uint8_t {aka unsigned char}' from 'int' may alter its value [-Wconversion]
     return bar + bar;
                ^
main.cpp: In function 'int main()':
main.cpp:11:16: error: expected ')' before 'PRId8'
     printf("%" PRId8 "\n", foo(0xff-1));
                ^
